unpackaged/main/default/objects/Lead/fields/Nom_du_salon__c.field-meta.xml
<CustomField>
    <fullName>Nom_du_salon__c</fullName>
    <label>Nom du salon</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Serbotel 2021</fullName>
            </value>
            <value>
                <fullName>ADMR 2022</fullName>
            </value>
            <value>
                <fullName>Agores 2022</fullName>
            </value>
            <value>
                <fullName>Alimentaria 2022</fullName>
            </value>
            <value>
                <fullName>BACK EUROPE 2022</fullName>
            </value>
            <value>
                <fullName>CIDIAL 2022</fullName>
            </value>
            <value>
                <fullName>Du Rock dans la Cuisine 2022</fullName>
            </value>
            <value>
                <fullName>ETS JOURDAIN 2022</fullName>
            </value>
            <value>
                <fullName>Food in Sud 2022</fullName>
            </value>
            <value>
                <fullName>Foire Intermarché Ciney 2022</fullName>
            </value>
            <value>
                <fullName>IAA 2022</fullName>
            </value>
            <value>
                <fullName>ITT UK 2022</fullName>
            </value>
            <value>
                <fullName>Rest Hotel Rennes 2022</fullName>
            </value>
            <value>
                <fullName>Salon du Fromage Paris 2022</fullName>
            </value>
            <value>
                <fullName>RESTAUCO 2022</fullName>
            </value>
            <value>
                <fullName>Rest Hotel Clermont-F 2022</fullName>
            </value>
            <value>
                <fullName>REST HOTEL REIMS 2022</fullName>
            </value>
            <value>
                <fullName>REST HOTEL ROUEN 2022</fullName>
            </value>
            <value>
                <fullName>SALON ALPIN 2022</fullName>
            </value>
            <value>
                <fullName>SALON DE LA BOUCHERIE CHARCUTERIE TRAITEUR 2022</fullName>
            </value>
            <value>
                <fullName>SALON DE LA BOULANGERIE ET DE LA PÂTISSERIE ANTILLES 2022</fullName>
            </value>
            <value>
                <fullName>SALON DES MAIRES ET DES COLLECTIVITÉS LOCALES 2022</fullName>
            </value>
            <value>
                <fullName>SIPRHO 2022</fullName>
            </value>
            <value>
                <fullName>SIRHA Budapest 2022</fullName>
            </value>
            <value>
                <fullName>QUALIDAYS 2022</fullName>
            </value>
            <value>
                <fullName>Vinequip 2022</fullName>
            </value>
            <value>
                <fullName>SIRHA 2023</fullName>
            </value>
            <value>
                <fullName>REST HOTEL BREST 2023</fullName>
            </value>
            <value>
                <fullName>SIPRHO MONTPELLIER 2023</fullName>
            </value>
            <value>
                <fullName>RESTHOTEL Tours 2023</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>