unpackaged/main/default/objects/Lead/fields/Nom_Operation_Global__c.field-meta.xml
<CustomField>
    <fullName>Nom_Operation_Global__c</fullName>
    <label>Nom de l&#39;opération</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Nom_operation</valueSetName>
    </valueSet>
</CustomField>