unpackaged/main/default/objects/Lead/fields/Nombre_de_jours_prochaine_activite__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_jours_prochaine_activite__c</fullName>
    <formula>IF(ISNULL( Date_de_planification_dactivite__c ),0,Datevalue( Date_de_planification_dactivite__c )- TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre de jours prochaine activité</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>