unpackaged/main/default/objects/Lead/fields/Numero_de_demande_internet__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_demande_internet__c</fullName>
    <displayFormat>{0000000000}</displayFormat>
    <label>Numéro de demande internet</label>
    <type>AutoNumber</type>
</CustomField>