unpackaged/main/default/objects/Lead/fields/NumeroPiste__c.field-meta.xml
<CustomField>
    <fullName>NumeroPiste__c</fullName>
    <displayFormat>GF-PST-{0000000000}</displayFormat>
    <externalId>true</externalId>
    <label>Numéro de la piste</label>
    <type>AutoNumber</type>
</CustomField>