unpackaged/main/default/objects/Lead/fields/Opportunit_associee__c.field-meta.xml
<CustomField>
    <fullName>Opportunit_associee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>champ créer pour les rapports</description>
    <label>Opportunité associée</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Pistes</relationshipLabel>
    <relationshipName>Pistes</relationshipName>
    <type>Lookup</type>
</CustomField>