unpackaged/main/default/objects/Lead/fields/Particulier_Professionnel__c.field-meta.xml
<CustomField>
    <fullName>Particulier_Professionnel__c</fullName>
    <label>Particulier / Professionnel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Particulier</fullName>
            </value>
            <value>
                <fullName>Professionnel</fullName>
            </value>
            <value>
                <fullName>Evénementiel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>