unpackaged/main/default/objects/Lead/fields/PaysRegionPF__c.field-meta.xml
<CustomField>
    <fullName>PaysRegionPF__c</fullName>
    <label>Pays / Région PF</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>DRO IDF 1</fullName>
            </value>
            <value>
                <fullName>DRO IDF 2</fullName>
            </value>
            <value>
                <fullName>DROM</fullName>
            </value>
            <value>
                <fullName>DRO NORD 1</fullName>
            </value>
            <value>
                <fullName>DRO NORD 2</fullName>
            </value>
            <value>
                <fullName>DRO NORD 3</fullName>
            </value>
            <value>
                <fullName>DRO NORD 4</fullName>
            </value>
            <value>
                <fullName>DRO NORD 5</fullName>
            </value>
            <value>
                <fullName>DRO NORD 6</fullName>
            </value>
            <value>
                <fullName>DRO NORD 7</fullName>
            </value>
            <value>
                <fullName>DRO SUD 1</fullName>
            </value>
            <value>
                <fullName>DRO SUD 2</fullName>
            </value>
            <value>
                <fullName>DRO SUD 3</fullName>
            </value>
            <value>
                <fullName>DRO SUD 4</fullName>
            </value>
            <value>
                <fullName>DRO SUD 5</fullName>
            </value>
            <value>
                <fullName>DRO SUD 6</fullName>
            </value>
            <value>
                <fullName>DRO SUD 7</fullName>
            </value>
            <value>
                <fullName>PFM</fullName>
            </value>
            <value>
                <fullName>PFUK</fullName>
            </value>
            <value>
                <fullName>PIAE</fullName>
            </value>
            <value>
                <fullName>PIAT</fullName>
            </value>
            <value>
                <fullName>PIBE</fullName>
            </value>
            <value>
                <fullName>PICH</fullName>
            </value>
            <value>
                <fullName>PICZ</fullName>
            </value>
            <value>
                <fullName>PIDE</fullName>
            </value>
            <value>
                <fullName>PIES</fullName>
            </value>
            <value>
                <fullName>PIHU</fullName>
            </value>
            <value>
                <fullName>PILU</fullName>
            </value>
            <value>
                <fullName>PIMA</fullName>
            </value>
            <value>
                <fullName>PIND</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>