unpackaged/main/default/objects/Lead/fields/Pick_up_Date__c.field-meta.xml
<CustomField>
    <fullName>Pick_up_Date__c</fullName>
    <label>Date de début de location</label>
    <type>DateTime</type>
</CustomField>