unpackaged/main/default/objects/Lead/fields/Produits__c.field-meta.xml
<CustomField>
    <fullName>Produits__c</fullName>
    <label>Produits</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Chambre froide</fullName>
            </value>
            <value>
                <fullName>Containers</fullName>
            </value>
            <value>
                <fullName>Meuble réfrigéré</fullName>
            </value>
            <value>
                <fullName>Meubles</fullName>
            </value>
            <value>
                <fullName>Véhicule frigorifique</fullName>
            </value>
            <value>
                <fullName>Véhicule Sec</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>