unpackaged/main/default/objects/Lead/fields/Produits_Icons__c.field-meta.xml
<CustomField>
    <fullName>Produits_Icons__c</fullName>
    <label>Produits_Icons</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Véhicule frigorifique</fullName>
            </value>
            <value>
                <fullName>Véhicule Sec</fullName>
            </value>
            <value>
                <fullName>Container</fullName>
            </value>
            <value>
                <fullName>Meuble</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>