unpackaged/main/default/objects/Lead/fields/RaisonCloture__c.field-meta.xml
<CustomField>
    <fullName>RaisonCloture__c</fullName>
    <label>Raison de clôture</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Agence trop éloignée</fullName>
            </value>
            <value>
                <fullName>Aucun potentiel</fullName>
            </value>
            <value>
                <fullName>Changement d’avis</fullName>
            </value>
            <value>
                <fullName>Client injoignable</fullName>
            </value>
            <value>
                <fullName>Compte existant</fullName>
            </value>
            <value>
                <fullName>Compte non identifié</fullName>
            </value>
            <value>
                <fullName>Conditions de locations non retenues</fullName>
            </value>
            <value>
                <fullName>Délai de réponse trop important</fullName>
            </value>
            <value>
                <fullName>Montant de la caution trop élevé</fullName>
            </value>
            <value>
                <fullName>Pas de réponse client</fullName>
            </value>
            <value>
                <fullName>Prix de location trop élevé</fullName>
            </value>
            <value>
                <fullName>Prix trop élevés</fullName>
            </value>
            <value>
                <fullName>Produit non disponible en stock</fullName>
            </value>
            <value>
                <fullName>Projet du client annulé ou reporté</fullName>
            </value>
            <value>
                <fullName>Prospect écarté pour raisons financières</fullName>
            </value>
            <value>
                <fullName>Solution alternative sans frais</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>