unpackaged/main/default/objects/Lead/fields/Reservation_a_confirmer__c.field-meta.xml
<CustomField>
    <fullName>Reservation_a_confirmer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Réservation à confirmer</label>
    <type>Checkbox</type>
</CustomField>