unpackaged/main/default/objects/Lead/fields/Reservation_confirmee__c.field-meta.xml
<CustomField>
    <fullName>Reservation_confirmee__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Acompte client à encaisser</inlineHelpText>
    <label>Réservation confirmée</label>
    <type>Checkbox</type>
</CustomField>