unpackaged/main/default/objects/Lead/fields/Rue__c.field-meta.xml
<CustomField>
    <fullName>Rue__c</fullName>
    <label>- Rue -</label>
    <length>255</length>
    <type>Text</type>
</CustomField>