unpackaged/main/default/objects/Lead/fields/Secteur__c.field-meta.xml
<CustomField>
    <fullName>Secteur__c</fullName>
    <label>Secteur</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agriculture et agroalimentaire</fullName>
            </value>
            <value>
                <fullName>Industrie</fullName>
            </value>
            <value>
                <fullName>Energie</fullName>
            </value>
            <value>
                <fullName>Commerce et artisanat</fullName>
            </value>
            <value>
                <fullName>Tourisme</fullName>
            </value>
            <value>
                <fullName>Télécoms et internet</fullName>
            </value>
            <value>
                <fullName>Santé</fullName>
            </value>
            <value>
                <fullName>Finance et assurance</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
            <value>
                <fullName>Énergie</fullName>
            </value>
            <value>
                <fullName>- Séléctionner -</fullName>
                <isActive>false</isActive>
                <label>- Séléctionner -</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>