unpackaged/main/default/objects/Lead/fields/Selection__c.field-meta.xml
<CustomField>
    <fullName>Selection__c</fullName>
    <label>Selection</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ram ProMaster Van</fullName>
            </value>
            <value>
                <fullName>Ram ProMaster</fullName>
            </value>
            <value>
                <fullName>Reefer Ram ProMaster</fullName>
            </value>
            <value>
                <fullName>Hino 155</fullName>
            </value>
            <value>
                <fullName>Reefer Hino 155</fullName>
            </value>
            <value>
                <fullName>Hino 195</fullName>
            </value>
            <value>
                <fullName>Reefer Hino 195</fullName>
            </value>
            <value>
                <fullName>Hino 268</fullName>
            </value>
            <value>
                <fullName>Reefer Hino 268</fullName>
            </value>
            <value>
                <fullName>Hino 338</fullName>
            </value>
            <value>
                <fullName>Tractor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>