unpackaged/main/default/objects/Lead/fields/Services__c.field-meta.xml
<CustomField>
    <fullName>Services__c</fullName>
    <label>Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Télématique</fullName>
            </value>
            <value>
                <fullName>RSE</fullName>
            </value>
            <value>
                <fullName>Energies alternatives</fullName>
            </value>
            <value>
                <fullName>Innovation</fullName>
            </value>
            <value>
                <fullName>Full service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>