unpackaged/main/default/objects/Lead/fields/TECH_Email__c.field-meta.xml
<CustomField>
    <fullName>TECH_Email__c</fullName>
    <formula>Owner:User.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_Email</label>
    <type>Text</type>
</CustomField>