unpackaged/main/default/objects/Lead/fields/TECH_Formulaire__c.field-meta.xml
<CustomField>
    <fullName>TECH_Formulaire__c</fullName>
    <defaultValue>false</defaultValue>
    <description>TRUE = Demande de rappel 
False = Demande de devis</description>
    <label>TECH_Formulaire</label>
    <type>Checkbox</type>
</CustomField>