unpackaged/main/default/objects/Lead/fields/TECH_Formulaire_Mendon__c.field-meta.xml
<CustomField>
    <fullName>TECH_Formulaire_Mendon__c</fullName>
    <defaultValue>false</defaultValue>
    <description>TRUE = Demande de contact
False = Demande de devis</description>
    <label>TECH_Formulaire_Mendon</label>
    <type>Checkbox</type>
</CustomField>