unpackaged/main/default/objects/Lead/fields/TECH_PF_AGENCES__c.field-meta.xml
<CustomField>
    <fullName>TECH_PF_AGENCES__c</fullName>
    <description>Ce filtre affiche tous les leads dont la valeur de “Agence PF” = Liste Agence de l’utilisateur</description>
    <formula>IF
(
AND( contains($User.Liste_Agences__c, Agence_PF__r.Code__c ) ,NOT(ISBLANK($User.Liste_Agences__c)),NOT(ISBLANK( Agence_PF__c ))
)
,
TRUE
,
FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH PF AGENCES</label>
    <type>Checkbox</type>
</CustomField>