unpackaged/main/default/objects/Lead/fields/TECH_SOURCE__c.field-meta.xml
<CustomField>
    <fullName>TECH_SOURCE__c</fullName>
    <label>TECH Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SF Maps</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>