unpackaged/main/default/objects/Lead/fields/TECHContactRecopierAdresseCompte__c.field-meta.xml
<CustomField>
    <fullName>TECHContactRecopierAdresseCompte__c</fullName>
    <defaultValue>true</defaultValue>
    <label>TECH Contact Recopier Adresse Compte</label>
    <type>Checkbox</type>
</CustomField>