unpackaged/main/default/objects/Lead/fields/TECHID__c.field-meta.xml
<CustomField>
    <fullName>TECHID__c</fullName>
    <formula>Id</formula>
    <label>TECH ID</label>
    <type>Text</type>
</CustomField>