unpackaged/main/default/objects/Lead/fields/TECHModeCreationCompte__c.field-meta.xml
<CustomField>
    <fullName>TECHModeCreationCompte__c</fullName>
    <label>TECH Mode de création Compte</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Piste</fullName>
                <default>true</default>
                <label>Piste</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>