unpackaged/main/default/objects/Lead/fields/TECHSource__c.field-meta.xml
<CustomField>
    <fullName>TECHSource__c</fullName>
    <formula>TEXT(LeadSource)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH Source</label>
    <type>Text</type>
</CustomField>