unpackaged/main/default/objects/Lead/fields/TECHWebToLead__c.field-meta.xml
<CustomField>
    <fullName>TECHWebToLead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TECH Web To Lead</label>
    <type>Checkbox</type>
</CustomField>