unpackaged/main/default/objects/Lead/fields/TypeActivite__c.field-meta.xml
<CustomField>
    <fullName>TypeActivite__c</fullName>
    <label>Type d&#39;activité</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Administration</fullName>
            </value>
            <value>
                <fullName>Alimentaire Non Frigorifique</fullName>
            </value>
            <value>
                <fullName>Association</fullName>
            </value>
            <value>
                <fullName>Beurre, Œufs, Fromage</fullName>
            </value>
            <value>
                <fullName>Boulangerie - Pâtisserie</fullName>
            </value>
            <value>
                <fullName>Crèmes Glacées, Surgelés</fullName>
            </value>
            <value>
                <fullName>Cuisine Centrale</fullName>
            </value>
            <value>
                <fullName>Déménagement</fullName>
            </value>
            <value>
                <fullName>Distributeur de boissons</fullName>
            </value>
            <value>
                <fullName>Distributeur de produits frais et surgelés</fullName>
            </value>
            <value>
                <fullName>Evenementiel</fullName>
            </value>
            <value>
                <fullName>Festivités</fullName>
            </value>
            <value>
                <fullName>Fleuriste</fullName>
            </value>
            <value>
                <fullName>Fruits et Légumes</fullName>
            </value>
            <value>
                <fullName>Grandes et Moyennes Surfaces</fullName>
            </value>
            <value>
                <fullName>Home Service</fullName>
            </value>
            <value>
                <fullName>Hôtelier</fullName>
            </value>
            <value>
                <fullName>Hygiène</fullName>
            </value>
            <value>
                <fullName>Loueur﻿</fullName>
            </value>
            <value>
                <fullName>Marée</fullName>
            </value>
            <value>
                <fullName>Médicaments / Laboratoires pharma</fullName>
            </value>
            <value>
                <fullName>Ostréiculteur</fullName>
            </value>
            <value>
                <fullName>Panification (producteur avec distrib. Intégrée)</fullName>
            </value>
            <value>
                <fullName>Particulier</fullName>
            </value>
            <value>
                <fullName>Portage de repas (CCAS-CPAS etc…)</fullName>
            </value>
            <value>
                <fullName>Producteur</fullName>
            </value>
            <value>
                <fullName>Producteurs Industriels</fullName>
            </value>
            <value>
                <fullName>Restaurateur</fullName>
            </value>
            <value>
                <fullName>Restauration Collective</fullName>
            </value>
            <value>
                <fullName>Restauration Rapide</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>