unpackaged/main/default/objects/Lead/fields/TypeIdentifiantNational__c.field-meta.xml
<CustomField>
    <fullName>TypeIdentifiantNational__c</fullName>
    <label>Type d&#39;identifiant national</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>PaysRegionPF__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>CIF</fullName>
            </value>
            <value>
                <fullName>CNIE</fullName>
            </value>
            <value>
                <fullName>COCCH</fullName>
            </value>
            <value>
                <fullName>CRO</fullName>
            </value>
            <value>
                <fullName>IBLC</fullName>
            </value>
            <value>
                <fullName>ICO</fullName>
            </value>
            <value>
                <fullName>KVK</fullName>
            </value>
            <value>
                <fullName>NIPC</fullName>
            </value>
            <value>
                <fullName>P.IVA</fullName>
            </value>
            <value>
                <fullName>RNMA</fullName>
            </value>
            <value>
                <fullName>SIREN</fullName>
            </value>
            <value>
                <fullName>TVABE</fullName>
            </value>
            <value>
                <fullName>TVADE</fullName>
            </value>
            <value>
                <fullName>TVAPL</fullName>
            </value>
            <value>
                <fullName>En création</fullName>
            </value>
            <value>
                <fullName>FN</fullName>
            </value>
            <value>
                <fullName>PRISMA</fullName>
            </value>
            <value>
                <fullName>RCRO</fullName>
            </value>
            <value>
                <fullName>COC</fullName>
            </value>
            <value>
                <fullName>RNHU</fullName>
            </value>
            <value>
                <fullName>VATHU</fullName>
            </value>
            <value>
                <fullName>COFIS</fullName>
            </value>
            <value>
                <fullName>TVAIT</fullName>
            </value>
            <value>
                <fullName>DUNS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>