unpackaged/main/default/objects/Lead/fields/Ville__c.field-meta.xml
<CustomField>
    <fullName>Ville__c</fullName>
    <label>- Ville -</label>
    <length>40</length>
    <type>Text</type>
</CustomField>