unpackaged/main/default/objects/Lead/recordTypes/Lead.recordType-meta.xml
<RecordType>
    <fullName>Lead</fullName>
    <active>true</active>
    <businessProcess>LeadPetitForestier</businessProcess>
    <label>Lead - PF Draft</label>
</RecordType>