unpackaged/main/default/objects/Lead/recordTypes/Lead_Mendon.recordType-meta.xml
<RecordType>
    <fullName>Lead_Mendon</fullName>
    <active>true</active>
    <businessProcess>Mendon</businessProcess>
    <description>Lead pour la filiale US</description>
    <label>Lead - Mendon</label>
</RecordType>