unpackaged/main/default/objects/Lead/recordTypes/Lead_PetitForestier_com.recordType-meta.xml
<RecordType>
    <fullName>Lead_PetitForestier_com</fullName>
    <active>true</active>
    <businessProcess>LeadPetitForestier</businessProcess>
    <label>Lead PetitForestier.com</label>
</RecordType>