unpackaged/main/default/objects/Lead/recordTypes/Lead_PetitForestier_com_Lecture_seule.recordType-meta.xml
<RecordType>
    <fullName>Lead_PetitForestier_com_Lecture_seule</fullName>
    <active>true</active>
    <businessProcess>LeadPetitForestier</businessProcess>
    <label>Lead PetitForestier.com Lecture seule</label>
</RecordType>