unpackaged/main/default/objects/Lead/recordTypes/Lead_PF_En_cours.recordType-meta.xml
<RecordType>
    <fullName>Lead_PF_En_cours</fullName>
    <active>true</active>
    <businessProcess>LeadPetitForestier</businessProcess>
    <label>Lead - PF En cours</label>
</RecordType>