unpackaged/main/default/objects/Lead/recordTypes/Lead_PF_Lecture_seule.recordType-meta.xml
<RecordType>
    <fullName>Lead_PF_Lecture_seule</fullName>
    <active>true</active>
    <businessProcess>LeadPetitForestier</businessProcess>
    <label>Lead PF - Lecture seule</label>
</RecordType>