unpackaged/main/default/objects/Lead/recordTypes/Lead_Zefirent_com.recordType-meta.xml
<RecordType>
    <fullName>Lead_Zefirent_com</fullName>
    <active>true</active>
    <businessProcess>LeadPetitForestier</businessProcess>
    <label>Lead Zefirent.com</label>
</RecordType>