unpackaged/main/default/objects/Lead/recordTypes/Lead_Zefirent_com_Lecture_seule.recordType-meta.xml
<RecordType>
    <fullName>Lead_Zefirent_com_Lecture_seule</fullName>
    <active>true</active>
    <businessProcess>LeadPetitForestier</businessProcess>
    <label>Lead Zefirent.com - Lecture seule</label>
</RecordType>