unpackaged/main/default/objects/Lead/recordTypes/Stricher_com.recordType-meta.xml
<RecordType>
    <fullName>Stricher_com</fullName>
    <active>true</active>
    <businessProcess>Stricher</businessProcess>
    <label>Stricher.com</label>
</RecordType>