unpackaged/main/default/objects/Lead/validationRules/VR01_Lead_Statut.validationRule-meta.xml
<ValidationRule>
    <fullName>VR01_Lead_Statut</fullName>
    <active>true</active>
    <description>Lead_RecordTypeId_PF</description>
    <errorConditionFormula>AND
(
OR( 
RecordType.Id = LEFT($Label.Lead_RecordTypeId_PF,15),
RecordType.Id = LEFT($Label.Lead_RecordTypeId_PF_En_cours	,15),
RecordType.Id = 
LEFT($Label.Lead_RecordTypeId_PetitForestier_com,15),
RecordType.Id = LEFT($Label.Lead_RecordTypeId_PF_Lecture_Seule,15)
)
,
ISPICKVAL(Status, &#39;Gagnée&#39;)
,
OR(ISBLANK(CA_estime__c),ISNULL(CA_estime__c))
)</errorConditionFormula>
    <errorMessage>Veuillez Remplir le champ CA estimé</errorMessage>
</ValidationRule>